# pycolormap-2d

./: .buildinfo  Pipfile  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/workflows/: publish-to-pypi.yml  test-and-lint.yml  test-lint-publish.yml  test.yml
_modules/: index.html
_modules/pycolormap_2d/: colormap_2d.html
_static/: documentation_options.js
docs/source/: conf.py  index.rst  modules.rst
py_pkg/: __init__.py  __version__.py  colormap_2d.py
pycolormap_2d/: __init__.py  __version__.py  colormap_2d.py
tests/: __init__.py  test_colormap_2d.py
